welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:3: error: not a legal formal parameter
		case _ if ((a>=13 && a<=19) || (b>=13 && b<=19) => 19
                                            ^teenSum:4: error: ')' expected but 'case' found.
		case _ => a+b
                ^